tools/moonshine/scanner/lex.go

// line 1 "scanner/lex.rl"
package scanner

import (
    "fmt"
    "encoding/hex"
    "strconv"
    "strings"
    "github.com/google/syzkaller/tools/moonshine/strace_types"
)


// line 15 "scanner/lex.go"
const strace_start int = 126
const strace_first_final int = 126
const strace_error int = 0

const strace_en_comment int = 159
const strace_en_main int = 126


// line 17 "scanner/lex.rl"


type lexer struct {
    result *strace_types.Syscall
    data []byte
    p, pe, cs int
    ts, te, act int
}

func newLexer (data []byte) *lexer {
    lex := &lexer {
        data: data,
        pe: len(data),
    }

    
// line 41 "scanner/lex.go"
	{
	 lex.cs = strace_start
	 lex.ts = 0
	 lex.te = 0
	 lex.act = 0
	}

// line 33 "scanner/lex.rl"
    return lex
}

func (lex *lexer) Lex(out *StraceSymType) int {
    eof := lex.pe
    tok := 0
    
// line 57 "scanner/lex.go"
	{
	if ( lex.p) == ( lex.pe) {
		goto _test_eof
	}
	switch  lex.cs {
	case 126:
		goto st_case_126
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 127:
		goto st_case_127
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 128:
		goto st_case_128
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 129:
		goto st_case_129
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 130:
		goto st_case_130
	case 131:
		goto st_case_131
	case 132:
		goto st_case_132
	case 133:
		goto st_case_133
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 134:
		goto st_case_134
	case 135:
		goto st_case_135
	case 136:
		goto st_case_136
	case 137:
		goto st_case_137
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 138:
		goto st_case_138
	case 67:
		goto st_case_67
	case 139:
		goto st_case_139
	case 140:
		goto st_case_140
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 141:
		goto st_case_141
	case 142:
		goto st_case_142
	case 143:
		goto st_case_143
	case 144:
		goto st_case_144
	case 145:
		goto st_case_145
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 146:
		goto st_case_146
	case 101:
		goto st_case_101
	case 102:
		goto st_case_102
	case 103:
		goto st_case_103
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 106:
		goto st_case_106
	case 107:
		goto st_case_107
	case 108:
		goto st_case_108
	case 109:
		goto st_case_109
	case 110:
		goto st_case_110
	case 111:
		goto st_case_111
	case 112:
		goto st_case_112
	case 113:
		goto st_case_113
	case 114:
		goto st_case_114
	case 115:
		goto st_case_115
	case 116:
		goto st_case_116
	case 117:
		goto st_case_117
	case 118:
		goto st_case_118
	case 119:
		goto st_case_119
	case 120:
		goto st_case_120
	case 121:
		goto st_case_121
	case 122:
		goto st_case_122
	case 123:
		goto st_case_123
	case 124:
		goto st_case_124
	case 147:
		goto st_case_147
	case 125:
		goto st_case_125
	case 148:
		goto st_case_148
	case 149:
		goto st_case_149
	case 150:
		goto st_case_150
	case 151:
		goto st_case_151
	case 152:
		goto st_case_152
	case 153:
		goto st_case_153
	case 154:
		goto st_case_154
	case 155:
		goto st_case_155
	case 156:
		goto st_case_156
	case 157:
		goto st_case_157
	case 158:
		goto st_case_158
	case 159:
		goto st_case_159
	case 160:
		goto st_case_160
	}
	goto st_out
tr14:
// line 63 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{out.data = string(lex.data[lex.ts+1:lex.te-1]); tok=IPV4; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr25:
// line 64 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{out.data = string(lex.data[lex.ts+1:lex.te-1]); tok=IPV6; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr33:
// line 92 "scanner/lex.rl"

( lex.p) = ( lex.te) - 1
{tok = COMMA;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr37:
// line 1 "NONE"

	switch  lex.act {
	case 0:
	{{goto st0 }}
	case 3:
	{( lex.p) = ( lex.te) - 1
out.val_int, _ = strconv.ParseInt(string(lex.data[lex.ts : lex.te]), 10, 64); tok = INT;{( lex.p)++;  lex.cs = 126; goto _out }}
	case 5:
	{( lex.p) = ( lex.te) - 1
out.val_int, _ = strconv.ParseInt(string(lex.data[lex.ts : lex.te]), 8, 64); tok = INT; {( lex.p)++;  lex.cs = 126; goto _out }}
	case 10:
	{( lex.p) = ( lex.te) - 1
tok = NULL; {( lex.p)++;  lex.cs = 126; goto _out }}
	case 11:
	{( lex.p) = ( lex.te) - 1
out.data = string(lex.data[lex.ts:lex.te]); tok = FLAG; {( lex.p)++;  lex.cs = 126; goto _out }}
	case 12:
	{( lex.p) = ( lex.te) - 1
out.data = string(lex.data[lex.ts:lex.te]); tok = IDENTIFIER;{( lex.p)++;  lex.cs = 126; goto _out }}
	case 36:
	{( lex.p) = ( lex.te) - 1
tok = COMMA;{( lex.p)++;  lex.cs = 126; goto _out }}
	}
	
	goto st126
tr51:
// line 69 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = UNFINISHED; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr52:
// line 89 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = ARROW; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr53:
// line 94 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{{goto st159 }}
	goto st126
tr73:
// line 93 "scanner/lex.rl"

( lex.p) = ( lex.te) - 1
{out.data = string(lex.data[lex.ts:lex.te]); tok = DATETIME; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr75:
// line 61 "scanner/lex.rl"

( lex.p) = ( lex.te) - 1
{out.val_int, _ = strconv.ParseInt(string(lex.data[lex.ts : lex.te]), 8, 64); tok = INT; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr91:
// line 71 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{out.data = string(lex.data[lex.ts : lex.te]); tok = MAC; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr96:
// line 87 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = LSHIFT; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr111:
// line 70 "scanner/lex.rl"

( lex.p) = ( lex.te) - 1
{tok = RESUMED; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr112:
// line 70 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = RESUMED; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr135:
// line 88 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = RSHIFT; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr136:
// line 96 "scanner/lex.rl"

 lex.te = ( lex.p)+1

	goto st126
tr137:
// line 85 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = NOT;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr140:
// line 74 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = LPAREN;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr141:
// line 76 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = RPAREN;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr142:
// line 79 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = TIMES; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr149:
// line 83 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = COLON; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr153:
// line 95 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = QUESTION; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr154:
// line 75 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = AT; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr158:
// line 77 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = LBRACKET_SQUARE;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr159:
// line 78 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = RBRACKET_SQUARE;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr162:
// line 80 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = LBRACKET;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr164:
// line 81 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = RBRACKET;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr165:
// line 86 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = ONESCOMP; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr166:
// line 65 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{out.data = ParseString(string(lex.data[lex.ts+1:lex.te-1])); tok = STRING_LITERAL;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr167:
// line 84 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{tok = AND;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr168:
// line 91 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = LAND;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr169:
// line 60 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{out.val_double, _ = strconv.ParseFloat(string(lex.data[lex.ts : lex.te]), 64); tok= DOUBLE; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr170:
// line 59 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{out.val_int, _ = strconv.ParseInt(string(lex.data[lex.ts : lex.te]), 10, 64); tok = INT;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr172:
// line 92 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{tok = COMMA;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr174:
// line 61 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{out.val_int, _ = strconv.ParseInt(string(lex.data[lex.ts : lex.te]), 8, 64); tok = INT; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr182:
// line 93 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{out.data = string(lex.data[lex.ts:lex.te]); tok = DATETIME; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr184:
// line 62 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{out.val_uint, _ = strconv.ParseUint(string(lex.data[lex.ts:lex.te]), 0, 64); tok = UINT;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr188:
// line 70 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{tok = RESUMED; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr190:
// line 72 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{tok = EQUALS;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr191:
// line 73 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = LEQUAL; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr192:
// line 68 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{out.data = string(lex.data[lex.ts:lex.te]); tok = IDENTIFIER;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr197:
// line 67 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{out.data = string(lex.data[lex.ts:lex.te]); tok = FLAG; {( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr201:
// line 82 "scanner/lex.rl"

 lex.te = ( lex.p)
( lex.p)--
{tok = OR;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
tr202:
// line 90 "scanner/lex.rl"

 lex.te = ( lex.p)+1
{tok = LOR;{( lex.p)++;  lex.cs = 126; goto _out }}
	goto st126
	st126:
// line 1 "NONE"

 lex.ts = 0

// line 1 "NONE"

 lex.act = 0

		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof126
		}
	st_case_126:
// line 1 "NONE"

 lex.ts = ( lex.p)

// line 696 "scanner/lex.go"
		switch  lex.data[( lex.p)] {
		case 32:
			goto tr136
		case 33:
			goto tr137
		case 34:
			goto st1
		case 38:
			goto st128
		case 39:
			goto st25
		case 40:
			goto tr140
		case 41:
			goto tr141
		case 42:
			goto tr142
		case 43:
			goto st27
		case 44:
			goto tr144
		case 45:
			goto st46
		case 47:
			goto st47
		case 48:
			goto tr147
		case 58:
			goto tr149
		case 60:
			goto st87
		case 61:
			goto st147
		case 62:
			goto st125
		case 63:
			goto tr153
		case 64:
			goto tr154
		case 78:
			goto st154
		case 91:
			goto tr158
		case 93:
			goto tr159
		case 95:
			goto st25
		case 123:
			goto tr162
		case 124:
			goto st158
		case 125:
			goto tr164
		case 126:
			goto tr165
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			switch {
			case  lex.data[( lex.p)] > 13:
				if 49 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
					goto tr148
				}
			case  lex.data[( lex.p)] >= 9:
				goto tr136
			}
		case  lex.data[( lex.p)] > 70:
			switch {
			case  lex.data[( lex.p)] < 97:
				if 71 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 90 {
					goto tr156
				}
			case  lex.data[( lex.p)] > 102:
				if 103 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
					goto st150
				}
			default:
				goto tr160
			}
		default:
			goto st148
		}
		goto st0
st_case_0:
	st0:
		 lex.cs = 0
		goto _out
	st1:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof1
		}
	st_case_1:
		switch  lex.data[( lex.p)] {
		case 34:
			goto st127
		case 42:
			goto st2
		case 47:
			goto st2
		case 58:
			goto st22
		case 92:
			goto st2
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto st3
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto st2
			}
		default:
			goto st2
		}
		goto st0
	st127:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof127
		}
	st_case_127:
		switch  lex.data[( lex.p)] {
		case 39:
			goto st127
		case 46:
			goto st127
		}
		goto tr166
	st2:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof2
		}
	st_case_2:
		switch  lex.data[( lex.p)] {
		case 34:
			goto st127
		case 42:
			goto st2
		case 92:
			goto st2
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 47 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto st2
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto st2
			}
		default:
			goto st2
		}
		goto st0
	st3:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof3
		}
	st_case_3:
		switch  lex.data[( lex.p)] {
		case 34:
			goto st127
		case 42:
			goto st2
		case 46:
			goto st4
		case 47:
			goto st2
		case 92:
			goto st2
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto st19
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto st2
			}
		default:
			goto st2
		}
		goto st0
	st4:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof4
		}
	st_case_4:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st5
		}
		goto st0
	st5:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof5
		}
	st_case_5:
		if  lex.data[( lex.p)] == 46 {
			goto st6
		}
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st16
		}
		goto st0
	st6:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof6
		}
	st_case_6:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st7
		}
		goto st0
	st7:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof7
		}
	st_case_7:
		if  lex.data[( lex.p)] == 46 {
			goto st8
		}
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st13
		}
		goto st0
	st8:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof8
		}
	st_case_8:
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st9
		}
		goto st0
	st9:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof9
		}
	st_case_9:
		if  lex.data[( lex.p)] == 34 {
			goto tr14
		}
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st10
		}
		goto st0
	st10:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof10
		}
	st_case_10:
		if  lex.data[( lex.p)] == 34 {
			goto tr14
		}
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st11
		}
		goto st0
	st11:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof11
		}
	st_case_11:
		if  lex.data[( lex.p)] == 34 {
			goto tr14
		}
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st12
		}
		goto st0
	st12:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof12
		}
	st_case_12:
		if  lex.data[( lex.p)] == 34 {
			goto tr14
		}
		goto st0
	st13:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof13
		}
	st_case_13:
		if  lex.data[( lex.p)] == 46 {
			goto st8
		}
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st14
		}
		goto st0
	st14:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof14
		}
	st_case_14:
		if  lex.data[( lex.p)] == 46 {
			goto st8
		}
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st15
		}
		goto st0
	st15:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof15
		}
	st_case_15:
		if  lex.data[( lex.p)] == 46 {
			goto st8
		}
		goto st0
	st16:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof16
		}
	st_case_16:
		if  lex.data[( lex.p)] == 46 {
			goto st6
		}
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st17
		}
		goto st0
	st17:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof17
		}
	st_case_17:
		if  lex.data[( lex.p)] == 46 {
			goto st6
		}
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto st18
		}
		goto st0
	st18:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof18
		}
	st_case_18:
		if  lex.data[( lex.p)] == 46 {
			goto st6
		}
		goto st0
	st19:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof19
		}
	st_case_19:
		switch  lex.data[( lex.p)] {
		case 34:
			goto st127
		case 42:
			goto st2
		case 46:
			goto st4
		case 47:
			goto st2
		case 92:
			goto st2
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto st20
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto st2
			}
		default:
			goto st2
		}
		goto st0
	st20:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof20
		}
	st_case_20:
		switch  lex.data[( lex.p)] {
		case 34:
			goto st127
		case 42:
			goto st2
		case 46:
			goto st4
		case 47:
			goto st2
		case 92:
			goto st2
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto st21
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto st2
			}
		default:
			goto st2
		}
		goto st0
	st21:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof21
		}
	st_case_21:
		switch  lex.data[( lex.p)] {
		case 34:
			goto st127
		case 42:
			goto st2
		case 46:
			goto st4
		case 92:
			goto st2
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 47 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto st2
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto st2
			}
		default:
			goto st2
		}
		goto st0
	st22:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof22
		}
	st_case_22:
		if  lex.data[( lex.p)] == 58 {
			goto st23
		}
		goto st0
	st23:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof23
		}
	st_case_23:
		if  lex.data[( lex.p)] == 34 {
			goto tr25
		}
